[package]
name = "gpu-overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.31"
egui-winit = "0.31"
egui_glow = { version = "0.31", features = ["winit"] }
glow = "0.16"
winit = "0.30"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView", "NSColor"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["shape"] }
